samples/_failures_safe/1761563518_f7147f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e73a7ea6.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e73a7ea6.c:140:5: error: expected expression at end of input
  140 |     printf("Vertex Distance from Source %d\n",
      |     ^~~~~~
./samples/SAFE/__tmp_e73a7ea6.c:140:5: error: expected declaration or statement at end of input
